--- a/gateware/testScript/Makefile
+++ b/gateware/testScript/Makefile
@@ -1,7 +1,7 @@
 PROJ = test
-ADD_SRC = clockDividerHertz.v
+ADD_SRC =
 
 PIN_DEF = feather.pcf
 DEVICE = up5k
 
-include main.mk
+include ../main.mk
